--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,13 @@
 android {
-    buildToolsVersion "25.0.2"
+    signingConfigs {
+        config {
+            keyAlias 'db'
+            keyPassword 'westwest'
+            storeFile file('E:/private/projects/kstore/db-release-key.keystore')
+            storePassword 'westwest'
+        }
+    }
+    buildToolsVersion '25.0.1'
     compileSdkVersion 25
     sourceSets {
         main {
@@ -21,11 +29,19 @@ android {
         applicationId "com.gamefactoryx.cheers"
         minSdkVersion 9
         targetSdkVersion 25
+        signingConfig signingConfigs.config
     }
     buildTypes {
         debug {
             debuggable true
         }
+        release {
+            signingConfig signingConfigs.config
+            minifyEnabled false
+            zipAlignEnabled true
+        }
+    }
+    productFlavors {
     }
 }
 // called every time gradle gets executed, takes the native dependencies of
