--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gamefactoryx.cheers"
-    android:versionCode="36"
-    android:versionName="1.0.34Alpha" >
+    android:versionCode="37"
+    android:versionName="1.0.35Alpha" >
 
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="25" />
 
@@ -23,4 +23,5 @@
         </activity>
     </application>
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="com.android.vending.BILLING" />
 </manifest>
