--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -23,5 +23,6 @@
         </activity>
     </application>
     <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="com.android.vending.BILLING" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.android.vending.BILLING"/>
 </manifest>
