--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ allprojects {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
+        maven { url "https://maven.google.com" }
+        jcenter()
+    }
+    dependencies{
+
     }
 }
 
@@ -76,6 +81,9 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86_64"
         compile "com.badlogicgames.gdxpay:gdx-pay-android:$gdxPayVersion"
         compile "com.badlogicgames.gdxpay:gdx-pay-android-googleplay:${gdxPayVersion}@aar"
+        compile "com.android.support:appcompat-v7:25.3.1"
+        compile "com.google.android.gms:play-services-ads:11.0.4"
+
     }
 }
 
