--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gamefactoryx.cheersapp"
-    android:versionCode="14"
-    android:versionName="1.0.14" >
+    android:versionCode="15"
+    android:versionName="1.0.15" >
 
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="25" />
 
@@ -25,4 +25,5 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="com.android.vending.BILLING"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
